# towards-generalizable-scene-change-detection

./: README.md  pyproject.toml
src/: framework.py  pseudo_generator.py  registration.py  requirements.txt  test.py  test.sh  test_single.py  test_single.sh  utils.py
src/segment_anything_model/: automatic_mask_generator.py  build_sam.py
src/segment_anything_model/modeling/: image_encoder.py  mask_decoder.py  sam.py
